# ariitk_fpv_racing

./: .clang-format  .gitmodules  README.md
ariitk_fpv_racing.wiki/: Home.md
basic_world/iros2016_track/: model.sdf
basic_world/iros2016_track/gates/: 01.dae  02.dae  03.dae
detector/: CMakeLists.txt  package.xml
detector/include/detector/: detector.hpp
detector/src/: detector.cpp
detector_msgs/: CMakeLists.txt  package.xml
detector_msgs/msg/: centre.msg
detector_ros/: CMakeLists.txt  package.xml
detector_ros/config/: param.yaml
detector_ros/include/detector_ros/: detector_ros.hpp
detector_ros/src/: detector_ros.cpp  detector_ros_node.cpp
fpv_planner/: CMakeLists.txt  package.xml
fpv_planner/config/: planner_params.yaml
fpv_planner/include/fpv_planner/: planner.hpp
fpv_planner/src/: planner.cpp  planner_node.cpp
install/: install_ssh.rosinstall
planner/: CMakeLists.txt  package.xml
planner/config/: planner_params.yaml
planner/include/planner/: planner.hpp
planner/src/: planner.cpp  planner_node.cpp
planner_ros/: CMakeLists.txt  package.xml
planner_ros/config/: params.yaml
planner_ros/include/planner_ros/: planner_ros.hpp
planner_ros/src/: planner_ros.cpp  planner_ros_node.cpp
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/include/pose_estimation/: pose_estimation.hpp
pose_estimation/src/: pose_estimation.cpp
pose_estimation_ros/: CMakeLists.txt  package.xml
pose_estimation_ros/include/pose_estimation_ros/: pose_estimation_ros.hpp
pose_estimation_ros/src/: pose_estimation_ros.cpp  pose_estimation_ros_node.cpp
simulator/: CMakeLists.txt  package.xml
simulator/launch/: basic_track.launch  control.launch  node_launcher.launch  px4.launch  world.launch
simulator/models/iris_with_camera/: model.config  model.sdf
simulator/models/urdf/: depth_camera.xacro  mav_with_camera.gazebo
simulator/worlds/: basic_racing_arena.world  display_track.world  final_testing.world  four_frames.world  iris_with_a_blueframe.world  test_arena.world  three_frames.world
simulator/worlds/iros2016_track/: README.md  model.config
simulator/worlds/iros2016_track/gates/: 05.dae  08.dae
