<?xml version="1.0"?>
<package format="2">
  <name>detector</name>
  <version>0.0.0</version>
  <description>The detector package</description>

  <maintainer email="rohanblueboybaijal@todo.todo">rohanblueboybaijal</maintainer>

  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/detector</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>cv_bridge</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
