<?xml version="1.0"?>
<package format="2">
  <name>detector</name>
  <version>0.0.0</version>
  <description>The detector package</description>

  <maintainer email="rohanblueboybaijal@todo.todo">rohanblueboybaijal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cv_bridge</depend>
  
</package>
