<?xml version="1.0"?>
<package format="2">
  <name>detector_msgs</name>
  <version>0.0.0</version>
  <description>The detector_msgs package</description>

  <maintainer email="isro@todo.todo">isro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  
</package>
