<?xml version="1.0"?>
<package format="2">
  <name>detector_ros</name>
  <version>0.0.0</version>
  <description>The detector_ros package</description>

  <maintainer email="isro@todo.todo">isro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>detector</depend>
  <depend>detector_msgs</depend>
 
</package>
