<?xml version="1.0"?>
<package format="2">
  <name>planner_ros</name>
  <version>0.0.0</version>
  <description>The planner_ros package</description>

  <maintainer email="isro@todo.todo">isro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>planner</depend>

</package>
