<?xml version="1.0"?>
<package format="2">
  <name>pose_estimation</name>
  <version>0.0.0</version>
  <description>The pose_estimation package</description>

  <maintainer email="rohanblueboybaijal@todo.todo">rohanblueboybaijal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>detector_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>

</package>
