<?xml version="1.0"?>
<package format="2">
  <name>pose_estimation_ros</name>
  <version>0.0.0</version>
  <description>The pose_estimation_ros package</description>

  <maintainer email="atharva@todo.todo">atharva</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>pose_estimation</depend>
  <depend>detector_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>dynamic_reconfigure</depend>

</package>
