<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>The simulator package</description>

  <maintainer email="isro@todo.todo">isro</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_nonlinear_mpc</depend>

</package>
